@@ -39,6 +39,33 @@ public class Principal {
 
         // Proceso notificaciones a clientes con cierre y que aún tienen días sin sincronizar
         try {
+            CierreFactura notif = new CierreFactura( hlp.getConnection() );
+            notif.procesa();
+            hlp.getConnection().commit();
+        } catch (Exception e) {
+            try {
+                hlp.getConnection().rollback();
+            } catch (SQLException e1) {
+            }
+            logger.error( "Al procesar notificaciones de clientes al cierre de factura", e );
+        }
+          
+        // Proceso notificaciones a clientes con cierre y que aún tienen días sin sincronizar
+        try {
+            FacturaParcial notif = new FacturaParcial( hlp.getConnection() );
+            notif.procesa();
+            hlp.getConnection().commit();
+        } catch (Exception e) {
+            try {
+                hlp.getConnection().rollback();
+            } catch (SQLException e1) {
+            }
+            logger.error( "Al procesar notificaciones de clientes a facturar", e );
+        }
+
+       
+        // Proceso notificaciones a clientes con cierre y que aún tienen días sin sincronizar
+        try {
             NoSincro notif = new NoSincro( hlp.getConnection() );
             notif.procesa();
             hlp.getConnection().commit();
@@ -71,33 +98,7 @@ public class Principal {
             if (!(e instanceof RuntimeException))
                 logger.error( "Al procesar facturación", e );
         }
-
-        // Proceso notificaciones a clientes con cierre y que aún tienen días sin sincronizar
-        try {
-            FacturaParcial notif = new FacturaParcial( hlp.getConnection() );
-            notif.procesa();
-            hlp.getConnection().commit();
-        } catch (Exception e) {
-            try {
-                hlp.getConnection().rollback();
-            } catch (SQLException e1) {
-            }
-            logger.error( "Al procesar notificaciones de clientes a facturar", e );
-        }
-
-        // Proceso notificaciones a clientes con cierre y que aún tienen días sin sincronizar
-        try {
-            CierreFactura notif = new CierreFactura( hlp.getConnection() );
-            notif.procesa();
-            hlp.getConnection().commit();
-        } catch (Exception e) {
-            try {
-                hlp.getConnection().rollback();
-            } catch (SQLException e1) {
-            }
-            logger.error( "Al procesar notificaciones de clientes al cierre de factura", e );
-        }
-
+                        
         // Proceso notificaciones a clientes que están a punto de facturar
         try {
             AFacturar notif = new AFacturar( hlp.getConnection() );
